fix: counters on small screen

--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -31,7 +31,7 @@
 }
 
 .counter {
-  @apply m-auto;
+  @apply mx-auto my-3;
   @apply font-heading text-16 text-center;
 
   span {
